--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img src="/assets/images/chainhero.png" alt="chainHero" title="chainHero"/>
+                <img src="/assets/images/chainhero.png" alt="exchange" title="exchange"/>
                 Heroes Service
             </a>
         </div>
